--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           getBalances();
           })
         }
-        catch(){
+        catch(err) {
           document.getElementById('walletLoadSuccessful').innerHTML = 'FAILURE'
         }
       }
