--- a/index.html
+++ b/index.html
@@ -138,13 +138,19 @@
       function getBalances() {
         
         var addresses = global_keystore.getAddresses();
+        address.push('0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359');
         document.getElementById('addr').innerHTML = 'Retrieving addresses...'
 
         async.map(addresses, web3.eth.getBalance, function(err, balances) {
           async.map(addresses, web3.eth.getTransactionCount, function(err, nonces) {
             document.getElementById('addr').innerHTML = ''
             for (var i=0; i<addresses.length; ++i) {
+              if(i < addresses.length - 1){
               document.getElementById('addr').innerHTML += '<div>' + addresses[i] + ' (Bal: ' + (balances[i] / 1.0e18) + ' ETH, Nonce: ' + nonces[i] + ')' + '</div>'
+              }
+              else{
+                 document.getElementById('addr').innerHTML += '<div>' + addresses[i] + ' (Bal: ' + (balances[i] / 1.0e18) + ' DAI, Nonce: ' + nonces[i] + ')' + '</div>'
+              }
             }
           })
         })
