--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       function getBalances() {
         
         var addresses = global_keystore.getAddresses();
-        address.push('0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359');
+        addresses.push('0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359');
         document.getElementById('addr').innerHTML = 'Retrieving addresses...'
 
         async.map(addresses, web3.eth.getBalance, function(err, balances) {
